--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -33,4 +33,8 @@
         <filter-name>encodingFilter</filter-name>    
         <url-pattern>/*</url-pattern>    
     </filter-mapping>  
+    <error-page>
+        <error-code>404</error-code>
+        <location>/WEB-INF/view/404.jsp</location>
+      </error-page>
 </web-app>
